--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <header>
+        <header id="top">
             <div class="logo">
                 <p>Cash Control</p>
             </div>
@@ -24,8 +24,8 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Savings</a></li>
-                    <li><a href="#">Log-In</a></li>
-                    <li><a href="#">Sign-Up</a></li>
+                    <li><a href="login.html">Log-In</a></li>
+                    <li><a href="signup.html">Sign-Up</a></li>
                 </ul>
             </div>
         </header>
@@ -34,18 +34,28 @@
         <div class="intro">
             <div class="container">
                 <h1 id="typing"></h1>
-                <p>Take Control of Your Fiances, One Click at a Time: Your Perosnal Finance Manager</p>
+                <p>Take Control of Your Fiances, One Click at a Time: Your Personal Finance Manager</p>
                 <button>See More</button>
             </div>
         </div>
+
+        <!-- Main Content -->
+        <div class="homeContent">
+            <div class="container">
+                <h1>Get started for 
+                    <span style="color: #5959c5;">free</span>
+                </h1>
+                <p>Track your expenditures, Set goals and Budget like a pro</p>
+            </div>
+        </div>
         
-        <!-- About me -->
-
-
-        <!-- Projects -->
-
-
-        <!-- Contact me -->
+        <!-- Footer -->
+        <footer>
+            <h3>Cash Control</h3>
+            <p>Built By Chirag</p>
+            <a href="#top">Back to top</a>
+        </footer>
+    
     </body>
 
     <script src="Scripts/wordType.js"></script>
