--- a/login.html
+++ b/login.html
@@ -22,10 +22,10 @@
 -->
             <div class="navbar">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Savings</a></li>
-                    <li><a href="#">Log-In</a></li>
-                    <li><a href="#">Sign-Up</a></li>
+                    <li><a href="login.html">Home</a></li>
+                    <li><a href="savings.html">Savings</a></li>
+                    <li><a href="login.html">Log-In</a></li>
+                    <li><a href="signup.html">Sign-Up</a></li>
                 </ul>
             </div>
         </header>
