--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
             </div>
         </header>
 
-        <!-- Login -->
+        <!-- Signup -->
         <div class="signup-page">
             <h2>Sign Up</h2>
             <div class="form">
@@ -40,6 +40,7 @@
                     <input type="password" placeholder="Password"/>
                     <input type="password" placeholder="Confirm Password"/>
                     <button>Sign Up</button>
+                    <p class="message">Already registered? <a href="#">Login</a></p>
               </form>
             </div>
         </div>
